--- a/dashboard.html
+++ b/dashboard.html
@@ -172,7 +172,7 @@
   </div>
 
   <div class="balance-card">
-    <div class="amount"><span id="balance-amount">≈ 0.00</span></div>
+    <div class="amount"><span id="balance-amount">0.00</span></div>
     <div class="label">Wallet Value</div>
     <div class="buttons">
       <button id="deposit-button"><i class="fas fa-wallet"></i>Deposit</button>
